--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "token": "",
+    "prefix": "!",
     "fakeStarts": [
         "Alright, ",
         "Okay, ",
@@ -25,7 +26,7 @@
             "globe_with_meridians"
         ],
         "reaction": [
-            "thumbs_up",
+            "thumbs_up"
         ],
         "nickname": [
             "simon",
