--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTkzMTU3MzY4OTA1MjAzNzM3.XRONGg.RIopZzn1NyduyyohaWGZHCefXQo",
+    "token": "",
     "prefix": "!",
     "fakeStarts": [
         "Alright,",
