removed token (again)

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTkzMTU3MzY4OTA1MjAzNzM3.XRaefA.bt6rOQhEgwPEdfOaRZAyKopDnLQ",
+    "token": "",
     "default_settings": {
         "config_permission": [
 
