token still here wtf

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTk0MzE5OTk1NTI2MTg0OTgx.XRav0Q.Pb4rUozfxxSvfNKkvD9s7FgySXA",
+    "token": "",
     "default_settings": {
         "config_permission": [
 
